# Treadmill-Controller-API

./: .flake8  .gitignore  README.md  app.py  easy.py  pyproject.toml  treadmill.py  workouts.py
.github/workflows/: main.yml
app/: app.py
src/: workouts.py
src/app/: __init__.py  app.py
src/treadmill/: __init__.py  controller.py  secret.py
src/tui/: __init__.py  app.py  server.py  treadmill.tcss
treadmill/: controller.py
